@@ -4,7 +4,8 @@ endif
 
 noinst_PROGRAMS = test_qrinput test_bitstream test_estimatebit \
 				  test_qrspec test_rs test_qrencode prof_qrencode \
-				  test_mqrspec test_split test_monkey create_frame_pattern \
+				  test_mqrspec test_split test_monkey \
+				  create_frame_pattern create_mqr_frame_pattern \
 				  $(sdlPROGRAMS)
 
 EXTRA_DIST = frame
@@ -42,6 +43,10 @@ prof_qrencode_LDADD = ../libqrencode.la
 create_frame_pattern_SOURCES = create_frame_pattern.c
 create_frame_pattern_CFLAGS = $(png_CFLAGS)
 create_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS)
+
+create_mqr_frame_pattern_SOURCES = create_mqr_frame_pattern.c
+create_mqr_frame_pattern_CFLAGS = $(png_CFLAGS)
+create_mqr_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS)
 
 if HAVE_SDL
 view_qrcode_SOURCES = view_qrcode.c common.h
